# PayDance

./: .gitattributes  .gitignore  .vercelignore  CHANGELOG.md  CHANGELOG_EN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  DESIGN.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  PRODUCT.md  README.md  README_EN.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  renovate.json
docs/: ARCHITECTURE.md  ARCHITECTURE_EN.md  CODE_OF_CONDUCT_EN.md  CONTRIBUTING_EN.md  DESIGN.md  FAQ.md  FAQ_EN.md  GOVERNANCE.md  GOVERNANCE_EN.md  MAINTAINERS.md  MAINTAINERS_EN.md  MAINTENANCE.md  MAINTENANCE_EN.md  PRODUCT.md  PRODUCT_EN.md  README_EN.md  ROADMAP.md  ROADMAP_EN.md  SECURITY_EN.md  SUPPORT.md  SUPPORT_EN.md  codex-contributor-note.md  desktop-smoke-checklist.md  desktop-smoke-checklist_EN.md  web-preview-qa.md  web-preview-qa_EN.md
en/: index.html
legal/: ADDITIONAL_TERMS.md  ADDITIONAL_TERMS_EN.md  BRAND-ASSETS.md  BRAND-ASSETS_EN.md  CLA.md  CLA_EN.md  LEGAL.md  LEGAL_EN.md  NOTICE.md  NOTICE_EN.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES_EN.md  TRADEMARK.md  TRADEMARK_EN.md
public/: robots.txt
scripts/: assert-build-boundary.mjs  assert-build-boundary.test.js  assert-build-target.mjs  assert-build-target.test.js  (+23 more)
src-tauri/: Cargo.toml  tauri.conf.json  window-chrome.test.js  workflow-cache.test.js
src-tauri/capabilities/: default.json  desktop.json  mini-opacity.json
src-tauri/src/: lib.rs  main.rs  portable_update.rs  tray.rs
(+144 files in other folders)
