[package]
name = "pay-pulse"
version = "0.5.4"
description = "薪跳 · 桌面实时薪资仪表盘"
authors = ["Codex"]
license = ""
repository = "https://github.com/MasterBao66/PayPulse"
edition = "2021"

[lib]
name = "pay_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
